@@ -101,17 +101,14 @@ public class CustomClaimConverter implements Converter<Map<String, Object>, Map<
                     }
                 }
                 if (user.has("groups")) {
-                    List<String> groups = StreamSupport
-                        .stream(user.get("groups").spliterator(), false)
-                        .map(JsonNode::asText)
-                        .collect(Collectors.toList());
+                    List<String> groups = StreamSupport.stream(user.get("groups").spliterator(), false).map(JsonNode::asText).toList();
                     convertedClaims.put("groups", groups);
                 }
                 if (user.has(SecurityUtils.CLAIMS_NAMESPACE + "roles")) {
                     List<String> roles = StreamSupport
                         .stream(user.get(SecurityUtils.CLAIMS_NAMESPACE + "roles").spliterator(), false)
                         .map(JsonNode::asText)
-                        .collect(Collectors.toList());
+                        .toList();
                     convertedClaims.put("roles", roles);
                 }
             }
